Issue #2718955 by matt.elkins, giupenni, tanc, andrey.troeglazov: Fieldset legend overlapping fields in vertical tab panes

--- a/skins/material/material.css
+++ b/skins/material/material.css
@@ -277,6 +277,10 @@ body.adminimal-skin-material .text-format-wrapper fieldset.filter-wrapper {
   border-radius: 0;
 }
 
+body.adminimal-skin-material .vertical-tabs-panes fieldset {
+  padding-top: 42px;
+}
+
 body.adminimal-skin-material .vertical-tabs-panes fieldset.vertical-tabs-pane {
   box-shadow: none;
 }
